[package]
name = "pokedex"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
image = "0.23.14"
term-table = "1.3.1"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = { version = "1.0.129", features = ["derive"] }
